# signalrs

lib/: Cargo.toml
lib/client-integration-tests/: Cargo.toml
lib/client-integration-tests/tests/: echo-tests.rs
lib/signalrs-client/: Cargo.toml
lib/signalrs-client/src/: builder.rs  invocation.rs  protocol.rs
lib/signalrs-client/src/hub/: invocation.rs
lib/signalrs-derive/: Cargo.toml
lib/signalrs-derive/src/: lib.rs
lib/signalrs-next/src/: protocol.rs
